@@ -29,8 +29,6 @@ import org.springframework.core.io.buffer.DataBufferFactory;
 import org.springframework.core.io.buffer.DataBufferUtils;
 import org.springframework.core.io.buffer.DefaultDataBufferFactory;
 import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.vault.VaultException;
 import org.springframework.vault.authentication.AuthenticationSteps.HttpRequest;
@@ -102,9 +100,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 				return (VaultToken) stateObject;
 			}
 
-			if (stateObject instanceof VaultResponse) {
-
-				VaultResponse response = (VaultResponse) stateObject;
+			if (stateObject instanceof VaultResponse response) {
 
 				Assert.state(response.getAuth() != null, "Auth field must not be null");
 
@@ -112,7 +108,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 			}
 
 			throw new IllegalStateException(
-					String.format("Cannot retrieve VaultToken from authentication chain. Got instead %s", stateObject));
+					"Cannot retrieve VaultToken from authentication chain. Got instead %s".formatted(stateObject));
 		}).onErrorMap(t -> new VaultLoginException("Cannot retrieve VaultToken from authentication chain", t));
 	}
 
@@ -124,7 +120,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 		for (Node<?> o : steps) {
 
 			if (logger.isDebugEnabled()) {
-				logger.debug(String.format("Executing %s with current state %s", o, state));
+				logger.debug("Executing %s with current state %s".formatted(o, state));
 			}
 
 			if (o instanceof HttpRequestNode) {
@@ -153,7 +149,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 			}
 
 			if (logger.isDebugEnabled()) {
-				logger.debug(String.format("Executed %s with current state %s", o, state));
+				logger.debug("Executed %s with current state %s".formatted(o, state));
 			}
 		}
 		return state;
@@ -205,11 +201,9 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 
 		Supplier<?> supplier = supplierStep.getSupplier();
 
-		if (!(supplier instanceof ResourceCredentialSupplier)) {
+		if (!(supplier instanceof ResourceCredentialSupplier resourceSupplier)) {
 			return Mono.fromSupplier(supplierStep.getSupplier()).subscribeOn(Schedulers.boundedElastic());
 		}
-
-		ResourceCredentialSupplier resourceSupplier = (ResourceCredentialSupplier) supplier;
 
 		return DataBufferUtils.join(DataBufferUtils.read(resourceSupplier.getResource(), this.factory, 4096))
 			.map(dataBuffer -> {
@@ -218,7 +212,7 @@ public class AuthenticationStepsOperator implements VaultTokenSupplier {
 				return (Object) result;
 			})
 			.onErrorMap(IOException.class, e -> new VaultException(
-					String.format("Credential retrieval from %s failed", resourceSupplier.getResource()), e));
+					"Credential retrieval from %s failed".formatted(resourceSupplier.getResource()), e));
 	}
 
 	enum Undefinded {
