@@ -15,8 +15,19 @@
  */
 package org.springframework.vault.core;
 
+import static org.springframework.vault.core.VaultTransitTemplate.*;
+
+import java.util.Base64;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+
 import org.springframework.util.Assert;
-import org.springframework.vault.core.VaultTransitTemplate.VaultTransitKeyImpl;
+import org.springframework.vault.core.VaultTransitTemplate.*;
 import org.springframework.vault.support.Ciphertext;
 import org.springframework.vault.support.Hmac;
 import org.springframework.vault.support.Plaintext;
@@ -35,17 +46,6 @@ import org.springframework.vault.support.VaultTransitContext;
 import org.springframework.vault.support.VaultTransitKey;
 import org.springframework.vault.support.VaultTransitKeyConfiguration;
 import org.springframework.vault.support.VaultTransitKeyCreationRequest;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
-
-import java.util.ArrayList;
-import java.util.Base64;
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-
-import static org.springframework.vault.core.VaultTransitTemplate.*;
 
 /**
  * Default implementation of {@link ReactiveVaultTransitOperations}.
@@ -73,7 +73,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		Assert.hasText(keyName, "Key name must not be empty");
 
-		return this.reactiveVaultOperations.write(String.format("%s/keys/%s", this.path, keyName), null).then();
+		return this.reactiveVaultOperations.write("%s/keys/%s".formatted(this.path, keyName), null).then();
 	}
 
 	@Override
@@ -82,8 +82,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		Assert.hasText(keyName, "Key name must not be empty");
 		Assert.notNull(createKeyRequest, "VaultTransitKeyCreationRequest must not be empty");
 
-		return this.reactiveVaultOperations.write(String.format("%s/keys/%s", this.path, keyName), createKeyRequest)
-			.then();
+		return this.reactiveVaultOperations.write("%s/keys/%s".formatted(this.path, keyName), createKeyRequest).then();
 	}
 
 	@Override
@@ -91,7 +90,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		Assert.hasText(keyName, "Key name must not be empty");
 
-		return this.reactiveVaultOperations.write(String.format("%s/keys/%s/rotate", this.path, keyName), null).then();
+		return this.reactiveVaultOperations.write("%s/keys/%s/rotate".formatted(this.path, keyName), null).then();
 	}
 
 	@Override
@@ -104,7 +103,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		request.put("plaintext", Base64.getEncoder().encodeToString(plaintext.getBytes()));
 
-		return this.reactiveVaultOperations.write(String.format("%s/encrypt/%s", this.path, keyName), request)
+		return this.reactiveVaultOperations.write("%s/encrypt/%s".formatted(this.path, keyName), request)
 			.map(it -> (String) it.getRequiredData().get("ciphertext"));
 	}
 
@@ -114,8 +113,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		Assert.hasText(keyName, "Key name must not be empty");
 		Assert.notNull(keyConfiguration, "VaultKeyConfiguration must not be empty");
 
-		return this.reactiveVaultOperations
-			.write(String.format("%s/keys/%s/config", this.path, keyName), keyConfiguration)
+		return this.reactiveVaultOperations.write("%s/keys/%s/config".formatted(this.path, keyName), keyConfiguration)
 			.then();
 	}
 
@@ -124,13 +122,13 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		Assert.hasText(keyName, "Key name must not be empty");
 
-		return this.reactiveVaultOperations.delete(String.format("%s/keys/%s", this.path, keyName));
+		return this.reactiveVaultOperations.delete("%s/keys/%s".formatted(this.path, keyName));
 	}
 
 	@Override
 	@SuppressWarnings("unchecked")
 	public Flux<String> getKeys() {
-		return this.reactiveVaultOperations.read(String.format("%s/keys?list=true", this.path))
+		return this.reactiveVaultOperations.read("%s/keys?list=true".formatted(this.path))
 			.flatMapIterable(it -> (List<String>) it.getRequiredData().get("keys"));
 	}
 
@@ -147,7 +145,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		applyTransitOptions(transitContext, request);
 
-		return this.reactiveVaultOperations.write(String.format("%s/encrypt/%s", this.path, keyName), request)
+		return this.reactiveVaultOperations.write("%s/encrypt/%s".formatted(this.path, keyName), request)
 			.map(it -> (String) it.getRequiredData().get("ciphertext"));
 	}
 
@@ -171,7 +169,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		request.put("ciphertext", ciphertext);
 
-		return this.reactiveVaultOperations.write(String.format("%s/decrypt/%s", this.path, keyName), request)
+		return this.reactiveVaultOperations.write("%s/decrypt/%s".formatted(this.path, keyName), request)
 			.map(it -> (String) it.getRequiredData().get("plaintext"))
 			.map(plaintext -> new String(Base64.getDecoder().decode(plaintext)));
 	}
@@ -199,7 +197,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		applyTransitOptions(transitContext, request);
 
-		return this.reactiveVaultOperations.write(String.format("%s/decrypt/%s", this.path, keyName), request)
+		return this.reactiveVaultOperations.write("%s/decrypt/%s".formatted(this.path, keyName), request)
 			.map(it -> (String) it.getRequiredData().get("plaintext"))
 			.map(Base64.getDecoder()::decode);
 	}
@@ -213,7 +211,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		Map<String, String> request = new LinkedHashMap<>();
 		request.put("ciphertext", ciphertext);
 
-		return this.reactiveVaultOperations.write(String.format("%s/rewrap/%s", this.path, keyName), request)
+		return this.reactiveVaultOperations.write("%s/rewrap/%s".formatted(this.path, keyName), request)
 			.map(response -> (String) response.getRequiredData().get("ciphertext"));
 	}
 
@@ -228,7 +226,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		applyTransitOptions(transitContext, request);
 
-		return this.reactiveVaultOperations.write(String.format("%s/rewrap/%s", this.path, keyName), request)
+		return this.reactiveVaultOperations.write("%s/rewrap/%s".formatted(this.path, keyName), request)
 			.map(response -> (String) response.getRequiredData().get("ciphertext"));
 	}
 
@@ -241,7 +239,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		return Flux.fromIterable(batchRequest)
 			.map(VaultTransitTemplate::createRewrapRequest)
 			.collectList()
-			.flatMap(batch -> this.reactiveVaultOperations.write(String.format("%s/rewrap/%s", this.path, keyName),
+			.flatMap(batch -> this.reactiveVaultOperations.write("%s/rewrap/%s".formatted(this.path, keyName),
 					Collections.singletonMap("batch_input", batch)))
 			.flatMapIterable(vaultResponse -> toBatchResults(vaultResponse, batchRequest, Ciphertext::getContext));
 	}
@@ -259,7 +257,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 			return vaultRequest;
 		})
 			.collectList()
-			.flatMap(batch -> this.reactiveVaultOperations.write(String.format("%s/encrypt/%s", this.path, keyName),
+			.flatMap(batch -> this.reactiveVaultOperations.write("%s/encrypt/%s".formatted(this.path, keyName),
 					Collections.singletonMap("batch_input", batch)))
 			.flatMapIterable(vaultResponse -> toBatchResults(vaultResponse, batchRequest, Plaintext::getContext));
 	}
@@ -277,7 +275,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 			return vaultRequest;
 		})
 			.collectList()
-			.flatMap(batch -> this.reactiveVaultOperations.write(String.format("%s/decrypt/%s", this.path, keyName),
+			.flatMap(batch -> this.reactiveVaultOperations.write("%s/decrypt/%s".formatted(this.path, keyName),
 					Collections.singletonMap("batch_input", batch)))
 			.flatMapIterable(vaultResponse -> toDecryptionResults(vaultResponse, batchRequest));
 	}
@@ -300,7 +298,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		Assert.notNull(hmacRequest, "HMAC request must not be null");
 
 		return this.reactiveVaultOperations
-			.write(String.format("%s/hmac/%s", this.path, keyName), toRequestBody(hmacRequest))
+			.write("%s/hmac/%s".formatted(this.path, keyName), toRequestBody(hmacRequest))
 			.map(vaultResponse -> (String) vaultResponse.getRequiredData().get("hmac"))
 			.map(Hmac::of);
 	}
@@ -323,7 +321,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		Assert.notNull(signRequest, "Sign request must not be null");
 
 		return this.reactiveVaultOperations
-			.write(String.format("%s/sign/%s", this.path, keyName), toRequestBody(signRequest))
+			.write("%s/sign/%s".formatted(this.path, keyName), toRequestBody(signRequest))
 			.map(vaultResponse -> (String) vaultResponse.getRequiredData().get("signature"))
 			.map(Signature::of);
 	}
@@ -347,7 +345,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		Assert.notNull(verificationRequest, "Signature verification request must not be null");
 
 		return this.reactiveVaultOperations
-			.write(String.format("%s/verify/%s", this.path, keyName), toRequestBody(verificationRequest))
+			.write("%s/verify/%s".formatted(this.path, keyName), toRequestBody(verificationRequest))
 			.map(VaultResponse::getRequiredData)
 			.map(vaultResponse -> {
 				if (vaultResponse.containsKey("valid") && (Boolean) vaultResponse.get("valid")) {
@@ -364,8 +362,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 		Assert.notNull(type, "Key type must not be null");
 
 		return this.reactiveVaultOperations
-			.read(String.format("%s/export/%s/%s", this.path, type.getValue(), keyName),
-					VaultTransitTemplate.RawTransitKeyImpl.class)
+			.read("%s/export/%s/%s".formatted(this.path, type.getValue(), keyName), RawTransitKeyImpl.class)
 			.flatMap(vaultResponse -> Mono.justOrEmpty(vaultResponse.getRequiredData()));
 	}
 
@@ -374,8 +371,7 @@ public class ReactiveVaultTransitTemplate implements ReactiveVaultTransitOperati
 
 		Assert.hasText(keyName, "Key name must not be empty");
 
-		return this.reactiveVaultOperations
-			.read(String.format("%s/keys/%s", this.path, keyName), VaultTransitKeyImpl.class)
+		return this.reactiveVaultOperations.read("%s/keys/%s".formatted(this.path, keyName), VaultTransitKeyImpl.class)
 			.map(VaultResponseSupport::getRequiredData);
 	}
 
